Add authors controller

--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -1,18 +1,6 @@
-<h1>Listing papers</h1>
+<h1>Papers</h1>
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @papers.each do |paper| %>
-  <tr>
-    <td><%= link_to paper.title, paper %></td>
-    <td><%= paper.year %></td>
-  </tr>
-<% end %>
-</table>
+<%= render :partial => 'papers', :object => @papers %>
 
 <br />
 
