--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1><%= @paper.title %></h1>
-<h2><%= @paper.authors.sort_by(&:position).map(&:name).join(', ') %></h2>
+<h2><%= @paper.authors.map {|i| link_to i.name, author_path(i) }.join(', ').html_safe %></h2>
 <h3><%= Date::MONTHNAMES[@paper.month] if @paper.month %> <%= @paper.year %></h3>
 
 <blockquote>
