Create authors for papers

--- a/app/views/papers/_form.html.erb
+++ b/app/views/papers/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= label_tag :author_list %><br />
-    <%= text_field_tag :author_list, @author_list, :size => 80 %>
+    <%= text_area_tag :author_list, @author_list, :rows => 4, :cols => 60 %>
   </div>
 
   <div class="actions">
