--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<div style="text-align:right;">
+  <% if @session_user %>
+    <%= @session_user.username %> |
+    <%= link_to 'Log Out', session_path, :method => :delete %>
+  <% else %>
+    <%= link_to 'Login', new_session_path %>
+  <% end %>
+</div>
+
 <%= yield %>
 
 </body>
