--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-<div style="text-align:right;">
+<div style="text-align:right; background-color:#eee; padding:5px 10px; -webkit-border-radius:5px;">
   <% if @session_user %>
+    <%= image_tag(gravatar_url(@session_user.email, 20), :style => 'vertical-align:top;') %>
     <%= @session_user.username %> |
     <%= link_to 'Log Out', session_path, :method => :delete %>
   <% else %>
