--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= @session_user.username %> |
     <%= link_to 'Log Out', session_path, :method => :delete %>
   <% else %>
+    <%= link_to 'Sign up', new_user_path %> |
     <%= link_to 'Login', new_session_path %>
   <% end %>
 </div>
