--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,20 @@
 </head>
 <body>
 
-<div style="text-align:right; background-color:#eee; padding:5px 10px; -webkit-border-radius:5px;">
-  <% if @session_user %>
-    <%= image_tag(gravatar_url(@session_user.email, 20), :style => 'vertical-align:top;') %>
-    <%= @session_user.username %> |
-    <%= link_to 'Log Out', session_path, :method => :delete %>
-  <% else %>
-    <%= link_to 'Sign up', new_user_path %> |
-    <%= link_to 'Login', new_session_path %>
-  <% end %>
-</div>
+<div style="width:1000px; margin:0px auto;">
+  <div style="text-align:right; background-color:#eee; padding:5px 10px; -webkit-border-radius:5px;">
+    <% if @session_user %>
+      <%= image_tag(gravatar_url(@session_user.email, 20), :style => 'vertical-align:top;') %>
+      <%= @session_user.username %> |
+      <%= link_to 'Log Out', session_path, :method => :delete %>
+    <% else %>
+      <%= link_to 'Sign up', new_user_path %> |
+      <%= link_to 'Login', new_session_path %>
+    <% end %>
+  </div>
 
-<%= yield %>
+  <%= yield %>
+</div>
 
 </body>
 </html>
