--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
 <div style="width:1000px; margin:0px auto;">
   <div style="text-align:right; background-color:#eee; padding:5px 10px; -webkit-border-radius:5px;">
+    <span style="float:left; font-weight:bold; font-size:16px;">PaperHub</span>
     <% if @session_user %>
       <%= image_tag(gravatar_url(@session_user.email, 20), :style => 'vertical-align:top;') %>
       <%= @session_user.username %> |
