--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
 
 <div style="width:1000px; margin:0px auto;">
   <div style="text-align:right; background-color:#eee; padding:5px 10px; -webkit-border-radius:5px;">
-    <span style="float:left; font-weight:bold; font-size:16px;">PaperHub</span>
+    <span style="float:left; font-weight:bold; font-size:16px;">
+      <%= link_to 'PaperHub', root_path, :style => 'text-decoration:none;' %></span>
     <% if @session_user %>
       <%= image_tag(gravatar_url(@session_user.email, 20), :style => 'vertical-align:top;') %>
-      <%= @session_user.username %> |
+      <%= link_to @session_user.username, user_path(@session_user) %> |
       <%= link_to 'Log Out', session_path, :method => :delete %>
     <% else %>
       <%= link_to 'Sign up', new_user_path %> |
