--- a/app/views/papers/_form.html.erb
+++ b/app/views/papers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@paper) do |f| %>
+<%= form_for(@paper, :html => {:multipart => true}) do |f| %>
   <% if @paper.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@paper.errors.count, "error") %> prohibited this paper from being saved:</h2>
@@ -29,6 +29,11 @@
   <div class="field">
     <%= label_tag :author_list %><br />
     <%= text_area_tag :author_list, @author_list, :rows => 4, :cols => 60 %>
+  </div>
+
+  <div class="field">
+    <%= label_tag :file %>:
+    <%= f.file_field :file, :accept => 'application/pdf' %>
   </div>
 
   <div class="actions">
