--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,10 +1,13 @@
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   13px;
-  line-height: 18px;
+  font-family: arial, sans-serif;
 }
+
+h1 { text-align: center; }
+h2 { text-align: center; font-size: 1.17em; }
+
+blockquote p { font-size: 18px; font-family: serif; }
 
 pre {
   background-color: #eee;
