--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -15,8 +15,8 @@ pre {
   font-size: 11px;
 }
 
-a { color: #000; }
-a:hover { color: #fff; background-color:#000; }
+a { color: #1877BA; text-decoration: none; }
+a:hover { text-decoration: underline; }
 
 div.field, div.actions {
   margin-bottom: 10px;
