--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="paper"><%= @paper.title %></h1>
-<h2 class="paper"><%= @paper.authors.map {|i| link_to i.name, author_path(i) }.join(', ').html_safe %></h2>
+<h2 class="paper">
+  <%= @paper.authors.map {|i| content_tag(:nobr, link_to(i.name, author_path(i))) }.join(', ').html_safe %>
+</h2>
 <h3 class="paper"><%= Date::MONTHNAMES[@paper.month] if @paper.month %> <%= @paper.year %></h3>
 
 <blockquote>
